unpackaged/main/default/objects/Account/fields/Aviso_de_Previsi_n__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_Previsi_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aviso de Previsión</label>
    <referenceTo>Aviso_de_Prevision__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>