unpackaged/main/default/objects/Account/fields/Aviso_de_Prevision__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_Prevision__c</fullName>
    <label>Aviso de Prevision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>