unpackaged/main/default/objects/Account/fields/Aviso_de_Responsable_Sanitario__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_Responsable_Sanitario__c</fullName>
    <label>Aviso de Responsable Sanitario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>