unpackaged/main/default/objects/Account/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>