unpackaged/main/default/objects/Account/fields/Clave_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Clave_Presupuestal__c</fullName>
    <externalId>true</externalId>
    <label>Clave Presupuestal</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>