unpackaged/main/default/objects/Account/fields/Delegaci_n__c.field-meta.xml
<CustomField>
    <fullName>Delegaci_n__c</fullName>
    <label>Delegación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001-AGUASCALIENTES</fullName>
            </value>
            <value>
                <fullName>002-BAJA CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>003-BAJA CALIFORNIA SUR</fullName>
            </value>
            <value>
                <fullName>004-CAMPECHE</fullName>
            </value>
            <value>
                <fullName>005-COAHUILA</fullName>
            </value>
            <value>
                <fullName>006-COLIMA</fullName>
            </value>
            <value>
                <fullName>007-CHIAPAS</fullName>
            </value>
            <value>
                <fullName>008-CHIHUAHUA</fullName>
            </value>
            <value>
                <fullName>009-DISTRITO FEDERAL</fullName>
            </value>
            <value>
                <fullName>010-DURANGO</fullName>
            </value>
            <value>
                <fullName>011-GUANAJUATO</fullName>
            </value>
            <value>
                <fullName>012-GUERRERO</fullName>
            </value>
            <value>
                <fullName>013-HIDALGO</fullName>
            </value>
            <value>
                <fullName>014-JALISCO</fullName>
            </value>
            <value>
                <fullName>015-ESTADO DE MÉXICO</fullName>
            </value>
            <value>
                <fullName>016-MICHOACAN</fullName>
            </value>
            <value>
                <fullName>017-MORELOS</fullName>
            </value>
            <value>
                <fullName>018-NAYARIT</fullName>
            </value>
            <value>
                <fullName>019-NUEVO LEÓN</fullName>
            </value>
            <value>
                <fullName>020-OAXACA</fullName>
            </value>
            <value>
                <fullName>021-PUEBLA</fullName>
            </value>
            <value>
                <fullName>022-QUERÉTARO</fullName>
            </value>
            <value>
                <fullName>023-QUINTANA ROO</fullName>
            </value>
            <value>
                <fullName>024-SAN LUIS POTOSÍ</fullName>
            </value>
            <value>
                <fullName>025-SINALOA</fullName>
            </value>
            <value>
                <fullName>026-SONORA</fullName>
            </value>
            <value>
                <fullName>027-TABASCO</fullName>
            </value>
            <value>
                <fullName>028-TAMAULIPAS</fullName>
            </value>
            <value>
                <fullName>029-TLAXCALA</fullName>
            </value>
            <value>
                <fullName>030-VERACRUZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>