unpackaged/main/default/objects/Account/fields/Direccion_de_Licencia_Sanitaria__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_Licencia_Sanitaria__c</fullName>
    <label>Direccion de Licencia Sanitaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>