unpackaged/main/default/objects/Account/fields/Numero_de_Ingreso_de_COFEPRIS__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Ingreso_de_COFEPRIS__c</fullName>
    <label>Numero de Ingreso de COFEPRIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>