unpackaged/main/default/objects/Account/fields/Numero_de_Licencia_Sanitaria__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Licencia_Sanitaria__c</fullName>
    <label>Numero de Licencia Sanitaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>