unpackaged/main/default/objects/Account/fields/Tipo_UMU__c.field-meta.xml
<CustomField>
    <fullName>Tipo_UMU__c</fullName>
    <label>Tipo UMU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAF</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CMCT</fullName>
            </value>
            <value>
                <fullName>CMF</fullName>
            </value>
            <value>
                <fullName>CMFE</fullName>
            </value>
            <value>
                <fullName>CMN</fullName>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>UMF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>