unpackaged/main/default/objects/Account/fields/UMU__c.field-meta.xml
<CustomField>
    <fullName>UMU__c</fullName>
    <externalId>true</externalId>
    <label>UMU</label>
    <length>5</length>
    <type>Text</type>
</CustomField>