unpackaged/main/default/objects/Account/fields/UMU_Cerrada__c.field-meta.xml
<CustomField>
    <fullName>UMU_Cerrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UMU Cerrada</label>
    <type>Checkbox</type>
</CustomField>