unpackaged/main/default/objects/Account/recordTypes/UMU.recordType-meta.xml
<RecordType>
    <fullName>UMU</fullName>
    <active>true</active>
    <label>UMU</label>
</RecordType>