unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>UMU__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Clave_Presupuestal__c</columns>
    <columns>Estado__c</columns>
    <columns>Ciudad__c</columns>
    <columns>Delegaci_n__c</columns>
    <columns>Tipo_UMU__c</columns>
    <columns>Direccion_de_Licencia_Sanitaria__c</columns>
    <columns>Numero_de_Licencia_Sanitaria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>